Configure config.json

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "883845b0",
+   "execution_count": 20,
+   "id": "e9ca9004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a5f99cbf",
+   "execution_count": 39,
+   "id": "11b04cb1",
    "metadata": {},
    "outputs": [],
    "source": [
     "response = requests.get(\"http://bloemetjesgordijn.github.io/tuneinator/config.json\")\n",
-    "response_dict = json.loads(response.text)\n"
+    "response_dict = json.loads(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "89d28f43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eerste': 'bb', 'tweede': 'aa'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed42284b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58490961",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ad9a063",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
