--- a/test.ipynb
+++ b/test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "1d190550",
+   "execution_count": 76,
+   "id": "759b8680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "3d5aac35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get(\"http://bloemetjesgordijn.github.io/tuneinator/config.json\")\n",
-    "response_dict = json.loads(response.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "9cc68bb6",
+   "execution_count": 82,
+   "id": "bc84ec3e",
    "metadata": {},
    "outputs": [
     {
@@ -37,19 +26,21 @@
        " 'jquery_version': 'jQuery2130996268872647724_1681673767647'}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "response = requests.get(\"http://bloemetjesgordijn.github.io/tuneinator/config.json\")\n",
+    "response_dict = json.loads(response.text)\n",
     "response_dict"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "830dec53",
+   "id": "efea0587",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,15 +48,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9197e04",
+   "id": "59ea0247",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "id": "94044182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "f489fd64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tunelocation = \"‪C:/Users/casbe/Downloads/tunedownloads/Believe Me - Navos.mp3\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "32018f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specky"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1dbddc93",
+   "id": "d2255692",
    "metadata": {},
    "outputs": [],
    "source": []
